<resources>
    <string name="app_name">Wallet App</string>
    <string name="hello_world">Hello ola!</string>
    <string name="action_settings">Settings</string>
    <string name="balance_label">Account balance</string>
    <string name="account_balance">100 Euro</string>
    <string name="currency">Euro</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add">Add</string>

    <!-- Menu Settings -->
    <string name="action_settings1">Home</string>
    <string name="action_settings2">Add item</string>
    <string name="action_settings3">List of items</string>
    <string name="action_settings4">Add Limit</string>
    <string name="action_settings6">Add Category</string>

    <!-- Add product View -->
    <string name="category_prompt">Choose a category</string>
    <string-array name="category_array">
        <item>No category</item>
    </string-array>
    <string name="add_button">Add</string>
    <string name="add_title"> Insert infos about the new item. </string>
    <string name="title_activity_show">Show</string>
    <string name="title_activity_add_category">AddCategory</string>
    <string name="title_activity_add_limit">AddLimit</string>
    <string name="item_name">Name</string>
    <string name="item_date">YYYYMMDD</string>
    <string name="item_date_picker">Date Picker</string>
    <string name="item_price">0,00</string>
    <string name="item_error_message">Add a category at first!</string>

    <!-- List View -->
    <string name="list_score">Score</string>
    <string name="list_item_name">Product name</string>
    <string name="list_item_price">0.0</string>
    <string name="list_item_date">01.01.1970</string>
    <string name="list_item_category">Category</string>

    <!-- Add Category View -->
    <string name="category_add_label">Add Category</string>
    <string name="category_name">Name</string>
    <string name="category_add">Add</string>
    <string name="category_add_error_label">Please insert category!</string>

    <!-- Add Limit -->
    <string name="addlimit_activity_label">Add Limit</string>
    <string name="addlimit_activity_tmplimit">0</string>
    <string name="addlimit_activity_button">Add</string>
    <string name="limit_add_error_label">Please insert limit!</string>
    <string name="title_activity_show_items">ShowItems</string>


</resources>
