<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.owi.wallet.AddLimit">

    <com.example.owi.wallet.fonts.OSLightEditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/addlimit_activity_tmplimit"
        android:inputType="numberDecimal" />

    <com.example.owi.wallet.fonts.OSRegTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:text="@string/limit_add_error_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"
        android:visibility="gone" />

    <com.example.owi.wallet.fonts.OSRegButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText5"
        android:onClick="addNewLimit"
        android:text="@string/addlimit_activity_button" />

    <com.example.owi.wallet.fonts.OSRegTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/addlimit_activity_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
