<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <com.example.owi.wallet.fonts.OSLightTextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_item_name"
        android:id="@+id/item_name"
        android:textIsSelectable="false"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:textColor="@color/activeButton"
        style="@style/horizMarg"
        />

    <com.example.owi.wallet.fonts.OSLightTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_item_date"
        android:id="@+id/item_date"
        android:textIsSelectable="false"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        style="@style/horizMarg"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.example.owi.wallet.fonts.OSLightTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_item_price"
        android:id="@+id/item_price"
        android:textIsSelectable="false"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        style="@style/horizMarg"
        android:layout_below="@+id/item_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/delete_button"
        android:layout_marginRight="27dp"
        android:layout_marginEnd="27dp"
        android:layout_alignTop="@+id/item_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>