<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.owi.wallet.Add">

    >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <com.example.owi.wallet.fonts.OSLightTextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginBottom="20dp"
            android:layout_span="0"
            android:capitalize="characters"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/add_title"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <com.example.owi.wallet.fonts.OSLightEditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_span="0"
            android:width="10dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textIsSelectable="true" />

    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/item_date_picker" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.example.owi.wallet.fonts.OSLightEditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/item_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/hintText" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.example.owi.wallet.fonts.OSLightEditText
            android:id="@+id/editText3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:hint="@string/item_price"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:inputType="numberDecimal"
            android:textColorHint="@color/hintText" />

    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.example.owi.wallet.fonts.OSLightTextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autoText="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/category_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/hintText"
            android:textIsSelectable="true" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_span="0"
            android:clickable="true"
            android:entries="@array/category_array"
            android:longClickable="true"
            android:minHeight="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:prompt="@string/category_prompt" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.example.owi.wallet.fonts.OSRegButton
            android:id="@+id/add_button"
            style="@style/horizMarg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/noActiveButton"
            android:capitalize="words"
            android:onClick="addProduct"
            android:text="@string/add_button"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:allowUndo="false"
            android:elegantTextHeight="false"
            android:enabled="false" />


    </TableRow>
</TableLayout>
